--- a/formResponse.ejs
+++ b/formResponse.ejs
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="container-fluid w-100 d-flex flex-column mt-4">
+    <div class="container-fluid w-50 d-flex flex-column justify-content-left ml-5 mt-4">
         <div class="alert alert-success" role="alert" style="font-weight: 900;">
             User logged in Successfully!
         </div>
