--- a/formResponse.ejs
+++ b/formResponse.ejs
@@ -17,7 +17,7 @@
         </div>
 
         <div class="alert alert-primary" role="alert" style="font-weight: 900; font-family: 'Courier New', Courier, monospace;">
-            Welcome back
+           <strong> Welcome back</strong>
 
         </div>
     </div>
